[gd_scene load_steps=15 format=3 uid="uid://djj2emjqatwno"]

[ext_resource type="Script" uid="uid://6naeucnmsfwj" path="res://npc.gd" id="1_ideak"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v7lw1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ideak"]
albedo_color = Color(1.4439225e-06, 0.49039716, 0.72046906, 1)
albedo_texture_msdf = true
metallic = 1.0
roughness = 0.18
proximity_fade_distance = 0.01
distance_fade_mode = 2
distance_fade_min_distance = 50.0
distance_fade_max_distance = 20.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ideak"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xxcha"]
albedo_color = Color(0, 0, 0, 1)
distance_fade_mode = 2
distance_fade_min_distance = 50.0
distance_fade_max_distance = 20.0

[sub_resource type="SphereMesh" id="SphereMesh_kh24r"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ul7y6"]
albedo_color = Color(1, 0, 0, 1)
albedo_texture_msdf = true
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 16.0
distance_fade_mode = 2
distance_fade_min_distance = 50.0
distance_fade_max_distance = 20.0

[sub_resource type="SphereShape3D" id="SphereShape3D_ideak"]
radius = 16.0

[sub_resource type="ViewportTexture" id="ViewportTexture_ideak"]
viewport_path = NodePath("Health3D/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh24r"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ul7y6"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="Animation" id="Animation_kh24r"]
resource_name = "in"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HPBarSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label3D:outline_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_bc6q4"]
resource_name = "out"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HPBarSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label3D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label3D:outline_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ul7y6"]
_data = {
&"in": SubResource("Animation_kh24r"),
&"out": SubResource("Animation_bc6q4")
}

[node name="NPC" type="CharacterBody3D" unique_id=1374715217 node_paths=PackedStringArray("ground_ray", "front_ray", "left_ray", "right_ray") groups=["Enemy"]]
editor_description = "extends CharacterBody3D

# ================== BEÁLLÍTÁSOK ==================

@export var turn_speed := 6.0

@export var speed := 3.2
@export var chase_speed := 4.6
@export var gravity := 20.0

@export var detection_range := 14.0
@export var lose_range := 18.0
@export var follow_distance := 1.5

@export var wander_min_time := 2.0
@export var wander_max_time := 5.0

# ================== NODE REFERENCIÁK ==================

@export var ground_ray: RayCast3D
@export var front_ray: RayCast3D
@export var left_ray: RayCast3D
@export var right_ray: RayCast3D

# ================== ÁLLAPOTOK ==================

enum State {
	IDLE,
	WANDER,
	CHASE
}

var state: State = State.WANDER
var target: Node3D

# ================== WANDER ==================

var wander_dir: Vector3 = Vector3.ZERO
var wander_time := 0.0

# ================== READY ==================

func _ready():
	randomize()
	set_target(get_tree().get_first_node_in_group(\"player\"))
	_pick_new_wander()

# ================== MAIN LOOP ==================

func _physics_process(delta):
	_apply_gravity(delta)

	match state:
		State.IDLE:
			_process_idle(delta)
		State.WANDER:
			_process_wander(delta)
		State.CHASE:
			_process_chase(delta)

	move_and_slide()

# ================== ÁLLAPOT LOGIKA ==================

func _process_idle(delta):
	velocity.x = 0
	velocity.z = 0

	_check_player_detection()

func _process_wander(delta):
	wander_time -= delta

	if wander_time <= 0:
		_pick_new_wander()

	if _is_path_blocked():
		_pick_new_wander(true)

	if not ground_ray.is_colliding():
		_pick_new_wander(true)

	velocity.x = wander_dir.x * speed
	velocity.z = wander_dir.z * speed

	_smooth_look(wander_dir, delta)
	_check_player_detection()

func _process_chase(delta):
	if not target:
		state = State.WANDER
		return

	var to_target = target.global_position - global_position
	to_target.y = 0

	var distance = to_target.length()
	var dir := Vector3.ZERO

	if distance > lose_range:
		state = State.WANDER
		return

	if distance > follow_distance:
		dir = to_target.normalized()

		if _is_path_blocked():
			dir = _avoid_direction(dir)

		velocity.x = dir.x * chase_speed
		velocity.z = dir.z * chase_speed
	else:
		velocity.x = 0
		velocity.z = 0
		# ilyenkor is nézzen a target felé
		dir = to_target.normalized()

	_smooth_look(dir, delta)

# ================== SEGÉD FUNKCIÓK ==================

func _apply_gravity(delta):
	if not is_on_floor():
		velocity.y -= gravity * delta
	else:
		velocity.y = 0

func _pick_new_wander(force := false):
	wander_time = randf_range(wander_min_time, wander_max_time)

	var dir = Vector3(
		randf_range(-1.0, 1.0),
		0,
		randf_range(-1.0, 1.0)
	).normalized()

	wander_dir = dir

func _check_player_detection():
	if not target:
		return

	var dist = global_position.distance_to(target.global_position)
	if dist <= detection_range:
		state = State.CHASE

func _is_path_blocked() -> bool:
	return front_ray.is_colliding()

func _avoid_direction(current_dir: Vector3) -> Vector3:
	if not left_ray.is_colliding():
		return -transform.basis.x
	if not right_ray.is_colliding():
		return transform.basis.x
	return -current_dir

func _smooth_look(dir: Vector3, delta: float):
	if dir.length() < 0.01:
		return

	var target_yaw = atan2(dir.x, dir.z)
	var speed_mod = clamp(Vector3(velocity.x, 0, velocity.z).length() / chase_speed, 0.3, 1.0)
	rotation.y = lerp_angle(rotation.y, target_yaw, turn_speed * speed_mod * delta)

# ================== KÜLSŐ HÍVÁS ==================

func set_target(node: Node3D):
	target = node
"
script = ExtResource("1_ideak")
ground_ray = NodePath("GroundRay")
front_ray = NodePath("FrontRay")
left_ray = NodePath("LeftRay")
right_ray = NodePath("RightRay")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1558405231]
shape = SubResource("CapsuleShape3D_v7lw1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1847083281]
material_override = SubResource("StandardMaterial3D_ideak")
mesh = SubResource("CapsuleMesh_ideak")

[node name="Eye" type="MeshInstance3D" parent="MeshInstance3D" unique_id=1230081059]
transform = Transform3D(0.39, 0, 0, 0, 0.39, 0, 0, 0, 0.39, 0, 0.5148893, 0.38062352)
material_override = SubResource("StandardMaterial3D_xxcha")
mesh = SubResource("SphereMesh_kh24r")

[node name="Eye2" type="MeshInstance3D" parent="MeshInstance3D" unique_id=774112054]
transform = Transform3D(0.225, 0, 0, 0, 0.225, 0, 0, 0, 0.225, 0, 0.5148893, 0.4726407)
material_override = SubResource("StandardMaterial3D_ul7y6")
mesh = SubResource("SphereMesh_kh24r")

[node name="OmniLight3D" type="OmniLight3D" parent="MeshInstance3D/Eye2" unique_id=870658711]
transform = Transform3D(4.4444447, 0, 0, 0, 4.4444447, 0, 0, 0, 4.4444447, -4.852923e-08, 0, 0.55510926)
light_color = Color(1, 0, 0, 1)
light_energy = 16.0
distance_fade_enabled = true
distance_fade_begin = 20.0
distance_fade_shadow = 20.0
distance_fade_length = 20.0

[node name="SpotLight3D" type="SpotLight3D" parent="MeshInstance3D/Eye2" unique_id=2032492696]
transform = Transform3D(-4.4444447, 0, 3.8854571e-07, 1.6240976e-07, 4.037555, 1.8577508, -3.529743e-07, 1.8577508, -4.037555, 0, 0, 0.49113536)
light_color = Color(1, 0, 0, 1)
light_energy = 10.0
light_volumetric_fog_energy = 10.0
distance_fade_enabled = true
distance_fade_begin = 20.0
distance_fade_shadow = 20.0
distance_fade_length = 20.0

[node name="GroundRay" type="RayCast3D" parent="." unique_id=1591270369]
target_position = Vector3(0, -2, 0)

[node name="FrontRay" type="RayCast3D" parent="." unique_id=984044459]
target_position = Vector3(0, 0, 1.2)

[node name="LeftRay" type="RayCast3D" parent="." unique_id=1088557453]
target_position = Vector3(-0.6, 0, 1)

[node name="RightRay" type="RayCast3D" parent="." unique_id=1379540523]
target_position = Vector3(0.6, 0, 1)

[node name="Areas" type="Node3D" parent="." unique_id=2038067804]

[node name="HpLabelFadeArea" type="Area3D" parent="Areas" unique_id=1915750471]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Areas/HpLabelFadeArea" unique_id=1312340699]
shape = SubResource("SphereShape3D_ideak")

[node name="Health3D" type="Node3D" parent="." unique_id=1817086558]

[node name="HPBarSprite" type="Sprite3D" parent="Health3D" unique_id=1754155526]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2222195, 0)
modulate = Color(1, 1, 1, 0)
billboard = 2
texture = SubResource("ViewportTexture_ideak")

[node name="Label3D" type="Label3D" parent="Health3D" unique_id=1096108014]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6064031, 0)
billboard = 2
modulate = Color(1, 1, 1, 0)
outline_modulate = Color(0, 0, 0, 0)
text = "Atlas"
font_size = 67

[node name="SubViewport" type="SubViewport" parent="Health3D" unique_id=994184705]
size = Vector2i(150, 27)

[node name="HPControl" type="Control" parent="Health3D/SubViewport" unique_id=1617437627]
layout_mode = 3
anchors_preset = 0
offset_right = 150.0
offset_bottom = 150.0

[node name="HPBar" type="ProgressBar" parent="Health3D/SubViewport/HPControl" unique_id=173327603]
custom_minimum_size = Vector2(150, 20)
layout_mode = 0
offset_right = 150.0
offset_bottom = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_kh24r")
theme_override_styles/fill = SubResource("StyleBoxFlat_ul7y6")
value = 50.0
show_percentage = false

[node name="Label" type="Label" parent="Health3D/SubViewport/HPControl" unique_id=1275873395]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_top = -0.505
offset_right = 150.0
offset_bottom = 27.495
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Health3D" unique_id=1035762416]
libraries = {
&"": SubResource("AnimationLibrary_ul7y6")
}

[connection signal="body_entered" from="Areas/HpLabelFadeArea" to="." method="_on_hp_label_fade_area_body_entered"]
[connection signal="body_exited" from="Areas/HpLabelFadeArea" to="." method="_on_hp_label_fade_area_body_exited"]
